# authwise-lite

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  ROADMAP.md  docker-compose.yml  llm-tiers.yaml  pyproject.toml
.claude/agents/: constitution-reviewer.md  general-reviewer.md  review-auditor.md
.github/workflows/: ci.yml
app/: config.py
app/cli/: main.py
app/domain/: cost.py  decide.py  drift.py  gate.py  golden.py  path.py  schemas.py
app/llm/: cassettes.py  router.py  tiers.py  tracing.py
app/persistence/: golden.py  routing_policy.py
app/workflow/: costs.py  fixtures.py  golden.py  graph.py  metrics.py  policy.py  prompts.py  runner.py
cassettes/base/: PA-base-001__classify__a1.json  PA-base-001__policy-check__a1.json  PA-base-002__classify__a1.json  PA-base-002__policy-check__a1.json  PA-base-003__classify__a1.json  (+67 more)
cassettes/base-broken-policy/: PA-base-015__classify__a1.json
docs/: tech-decisions.md
fixtures/: golden-base.jsonl  requests-base.jsonl  requests-post.jsonl  requests-smoke.jsonl
scripts/: author_broken_cassettes.py  author_smoke_cassettes.py  drift_push.py  drift_verify.py  golden_upload.py  golden_verify.py  langfuse_verify.py  metrics_push.py  path_gate.py  policy_seed.py  policy_swap.py  policy_verify.py  slo_verify.py  verify_http.py
slo/: prometheus.yml
tests/: conftest.py  test_budget.py  test_cassettes.py  test_cost.py  test_domain.py  test_drift.py  test_golden.py  test_litellm_discipline.py  test_metrics.py  test_path_gate.py  test_policy.py  test_smoke_paths.py  test_tiers.py  test_tracing.py
(+125 files in other folders)
