[project]
name = "authwise-lite"
version = "0.1.0"
description = "Trajectory-eval control plane над многошаговым PA-агентом (fixture: Northfield Health)"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=1,<2",
    "litellm>=1.55,<2",
    "pydantic>=2.7,<3",
    "pydantic-settings>=2.3,<3",
    "pyyaml>=6",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.6",
    "pytest>=8",
    "mypy>=1.10",
    "types-PyYAML",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.mypy]
python_version = "3.11"
warn_unused_ignores = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = ["litellm.*"]
ignore_missing_imports = true
